--- a/index.html
+++ b/index.html
@@ -2,126 +2,110 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Marlow Gate — Trading data & automation tools</title>
-<meta name="description" content="Marlow Gate builds practical tools for traders: blackout calendars, automation-ready CSVs, and simple workflows.">
+<title>Macro Blackout Calendars — TRADER (ICS) & PRO (ICS+CSV) | Marlow Gate</title>
+<meta name="description" content="Avoid bad minutes. Weekly UTC blackout calendars for policy/inflation/employment and planned maintenance. ICS for Outlook/Google/Apple, CSV for automation.">
 <link rel="icon" href="/assets/favicon.png">
-<meta property="og:url" content="https://marlowgate.com/">
-<meta property="og:title" content="Marlow Gate — Trading data & automation tools">
-<meta property="og:description" content="Block the chaos. Trade the plan. Practical utilities that fit your workflow — calendars you can trust, CSVs you can automate.">
+<meta property="og:url" content="https://marlowgate.com/calendars/">
+<meta property="og:title" content="Macro Blackout Calendars — TRADER (ICS) & PRO (ICS+CSV) | Marlow Gate">
+<meta property="og:description" content="Avoid bad minutes. Weekly UTC blackout calendars for policy/inflation/employment and planned maintenance. ICS + CSV.">
 <meta property="og:image" content="https://marlowgate.com/assets/og_cover_1200x630.png">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="https://marlowgate.com/assets/og_cover_1200x630.png">
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-body{background:#f8fafc;color:#0b1220}
-.btn{padding:.85rem 1.15rem;border-radius:1rem;font-weight:700;display:inline-block}
+body{background:#0B1220;color:#F0F4FF}
+.btn{padding:.8rem 1.2rem;border-radius:.8rem;font-weight:700}
 .btn-primary{background:#06b6d4;color:#001018}
-.btn-ghost{border:1px solid #e5e7eb;color:#0b1220}
-.card{background:#ffffff;border:1px solid #e5e7eb;border-radius:1.25rem;padding:1.25rem}
-.shadow-soft{box-shadow:0 6px 18px rgba(2,6,23,.06)}
+.btn-secondary{border:2px solid #F0F4FF;color:#F0F4FF}
+.card{background:#0f172a;border:1px solid #1f2a44;border-radius:1rem;padding:1.25rem}
 </style>
 <script type="application/ld+json">
 {
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "Marlow Gate",
-  "url": "https://marlowgate.com/",
-  "logo": "https://marlowgate.com/assets/og_cover_1200x630.png",
-  "sameAs": []
-}
-</script>
-<script type="application/ld+json">
-{
   "@context":"https://schema.org",
-  "@type":"WebSite",
-  "url":"https://marlowgate.com/",
-  "name":"Marlow Gate",
-  "potentialAction":{"@type":"SearchAction","target":"https://marlowgate.com/?q={search_term_string}","query-input":"required name=search_term_string"}
+  "@type":"Product",
+  "name":"Marlow Gate — Macro Blackout Calendars",
+  "url":"https://marlowgate.com/calendars/",
+  "description":"Weekly UTC blackout windows for traders. TRADER (ICS) and PRO (ICS+CSV).",
+  "brand":{"@type":"Brand","name":"Marlow Gate"},
+  "offers":[
+    {"@type":"Offer","price":"4.90","priceCurrency":"USD","availability":"https://schema.org/InStock","url":"https://store.marlowgate.com/l/marlow-gate-calendars"},
+    {"@type":"Offer","price":"8.90","priceCurrency":"USD","availability":"https://schema.org/InStock","url":"https://store.marlowgate.com/l/marlow-gate-calendars"}
+  ]
 }
 </script>
 </head>
 <body class="antialiased">
-<header class="max-w-6xl mx-auto px-5 py-5 flex items-center justify-between">
-  <a href="/" class="font-extrabold tracking-tight text-xl">Marlow Gate</a>
-  <nav class="hidden md:flex gap-6 text-sm">
-    <a href="/calendars/" class="opacity-90 hover:opacity-100">Calendars</a>
-    <a href="#about" class="opacity-90 hover:opacity-100">About</a>
-    <a href="#faq" class="opacity-90 hover:opacity-100">FAQ</a>
-    <a href="https://store.marlowgate.com" class="opacity-90 hover:opacity-100">Store</a>
-  </nav>
+<main class="max-w-5xl mx-auto px-6 py-12">
+<header class="mb-10">
+  <a href="/" class="opacity-80 underline">&larr; Back to Marlow Gate</a>
+  <h1 class="text-4xl md:text-5xl font-bold leading-tight mt-3">Avoid bad minutes. Plan the week.</h1>
+  <p class="mt-3 text-lg opacity-90">Macro blackout calendars for traders — <b>TRADER (ICS)</b> & <b>PRO (ICS+CSV)</b>. Weekly UTC updates.</p>
+  <div class="mt-6 flex gap-3">
+    <a href="https://store.marlowgate.com/l/marlow-gate-calendars?utm_source=site&utm_medium=cta&utm_campaign=calendars" class="btn btn-primary">Subscribe</a>
+    <a href="#preview" class="btn btn-secondary">See preview</a>
+  </div>
 </header>
 
-<main>
-<section class="max-w-6xl mx-auto px-5 py-12 md:py-16">
-  <div class="grid md:grid-cols-2 gap-8 items-center">
-    <div>
-      <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">Trading data &<br class="hidden md:block"> automation tools</h1>
-      <p class="mt-4 text-lg text-slate-600">Block the chaos. Trade the plan. Practical utilities that fit your workflow — calendars you can trust, CSVs you can automate.</p>
-      <div class="mt-6 flex gap-3">
-        <a class="btn btn-primary shadow-soft" href="/calendars/">Macro blackout calendars →</a>
-        <a class="btn btn-ghost" href="https://store.marlowgate.com">Open store</a>
-      </div>
-    </div>
-    <div class="card shadow-soft">
-      <img src="/assets/og_cover_1200x630.png" alt="Preview" class="rounded-lg">
-    </div>
+<section class="grid md:grid-cols-3 gap-4 mb-10">
+  <div class="card"><b>Protect entries & exits</b><br>Avoid policy/inflation/employment releases & planned maintenance windows.</div>
+  <div class="card"><b>Trade the plan</b><br>Keep your schedule synced to Outlook/Google/Apple.</div>
+  <div class="card"><b>Automate (PRO)</b><br>CSV with stable <code>event_id</code> for filters & backtests.</div>
+</section>
+
+<section class="grid md:grid-cols-2 gap-6 mb-12">
+  <div class="card">
+    <h2 class="text-2xl font-bold">TRADER (ICS only)</h2>
+    <ul class="list-disc ml-6 mt-3 space-y-1">
+      <li>Rate decisions, CPI(HICP/PCE), US Employment (NFP), GDP</li>
+      <li>US / EU / GB / JP / CA / AU</li>
+      <li>Forward look: 4–6 weeks</li>
+      <li>Weekly updates, UTC</li>
+    </ul>
+  </div>
+  <div class="card">
+    <h2 class="text-2xl font-bold">PRO (ICS + CSV)</h2>
+    <ul class="list-disc ml-6 mt-3 space-y-1">
+      <li>TRADER + Minutes / Retail / PMI / Auctions / Maintenance</li>
+      <li>CSV with stable <code>event_id</code></li>
+      <li>Forward look: 6–8 weeks</li>
+      <li>Weekly updates, UTC</li>
+    </ul>
   </div>
 </section>
 
-<section id="products" class="max-w-6xl mx-auto px-5 py-10">
-  <h2 class="text-2xl font-bold">Current products</h2>
-  <div class="grid md:grid-cols-3 gap-6 mt-4">
-    <div class="card shadow-soft">
-      <h3 class="text-lg font-semibold">Macro blackout calendars</h3>
-      <p class="text-slate-600 mt-1 text-sm">TRADER (ICS) & PRO (ICS+CSV). Weekly UTC.</p>
-      <a class="btn btn-primary mt-4" href="/calendars/">View →</a>
-    </div>
-    <div class="card opacity-60">
-      <h3 class="text-lg font-semibold">Strategy notebooks</h3>
-      <p class="text-slate-600 mt-1 text-sm">Coming soon</p>
-    </div>
-    <div class="card opacity-60">
-      <h3 class="text-lg font-semibold">Automation templates</h3>
-      <p class="text-slate-600 mt-1 text-sm">Coming soon</p>
-    </div>
-  </div>
-</section>
-
-<section id="about" class="max-w-6xl mx-auto px-5 py-10">
-  <h2 class="text-2xl font-bold">About</h2>
+<section class="mb-12" id="pricing">
+  <h2 class="text-2xl font-bold">Pricing</h2>
   <div class="grid md:grid-cols-2 gap-6 mt-4">
-    <div class="card shadow-soft">
-      <p class="text-slate-700">Marlow Gate builds small, reliable tools for traders. We focus on accuracy, update discipline, and automation readiness.</p>
-      <ul class="list-disc ml-5 mt-3 text-slate-700">
-        <li>UTC-first data; your calendar converts to local time</li>
-        <li>Stable IDs in CSV for filters & backtests</li>
-        <li>Refunds for file corruption or material errors</li>
-      </ul>
-    </div>
-    <div class="card shadow-soft">
-      <p class="text-slate-700">Contact: <a class="underline" href="mailto:support@marlowgate.com">support@marlowgate.com</a><br>Commercial use allowed within your org; redistribution is not permitted. Not investment advice.</p>
-    </div>
+    <div class="card"><h3 class="text-xl font-semibold">TRADER</h3><p class="opacity-90">USD $4.90 / month</p></div>
+    <div class="card"><h3 class="text-xl font-semibold">PRO</h3><p class="opacity-90">USD $8.90 / month</p></div>
+  </div>
+  <div class="mt-6">
+    <a href="https://store.marlowgate.com/l/marlow-gate-calendars?utm_source=site&utm_medium=cta&utm_campaign=calendars" class="btn btn-primary">Choose your tier →</a>
   </div>
 </section>
 
-<section id="faq" class="max-w-6xl mx-auto px-5 py-10">
+<section class="mb-12" id="preview">
+  <h2 class="text-2xl font-bold">Preview</h2>
+  <p class="mt-2 opacity-90">ICS (UTC) and CSV (PRO). See README for schema.</p>
+  <img src="/assets/og_cover_1200x630.png" alt="Preview" class="mt-4 rounded-lg border border-slate-700">
+</section>
+
+<section class="mb-12" id="faq">
   <h2 class="text-2xl font-bold">FAQ</h2>
-  <div class="grid md:grid-cols-2 gap-6 mt-4">
-    <div class="card shadow-soft">
-      <p class="font-semibold">How are files delivered?</p>
-      <p class="text-slate-700 mt-1">Weekly posts on Gumroad with a ZIP; ICS for calendars, CSV for automation (PRO).</p>
-    </div>
-    <div class="card shadow-soft">
-      <p class="font-semibold">Refund policy?</p>
-      <p class="text-slate-700 mt-1">7 days for file corruption/critical errors/accidental duplicates.</p>
-    </div>
+  <div class="mt-3 space-y-2">
+    <p><b>Supported calendars?</b> Outlook / Google / Apple (ICS standard).</p>
+    <p><b>Timezone?</b> UTC inside; your calendar converts to local on import.</p>
+    <p><b>Update cadence?</b> Weekly (hotfixes on major changes).</p>
+    <p><b>Duplicates?</b> Canonical titles + ±48h clustering.</p>
+    <p><b>Advice?</b> None — schedule/ops metadata only.</p>
   </div>
 </section>
-</main>
 
-<footer class="max-w-6xl mx-auto px-5 py-10 text-sm text-slate-600">
-  <div class="border-t pt-6">© Marlow Gate — All rights reserved.</div>
+<footer class="opacity-80 text-sm mt-12">
+  <p>Support: <a href="mailto:support@marlowgate.com" class="underline">support@marlowgate.com</a></p>
+  <p>© Marlow Gate. Internal commercial use allowed; redistribution forbidden. Not investment advice.</p>
 </footer>
+</main>
 </body>
 </html>
